# ofvr

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.rst  example  ofvr.rs  test  test.sh
.github/workflows/: ci.yml
examples/: commit-blob.rs
gdiff/: .cspell.json  .gitignore  Cargo.toml  quicktest.sh
gdiff/cli/: gdiff.rs
gdiff/gdiff/: core.rs  errors.rs  lib.rs
gdiff/tests/: test_function_diff.rs  test_render.rs  test_serde.rs  test_struct_diff.rs
ofvr/: cli.rs  errors.rs  hash.rs  io.rs  lib.rs  models.rs  roles.rs  traits.rs  utils.rs
ofvr/data/: core.rs  mod.rs  ops.rs
ofvr/models/: author.rs  commit.rs  commit_data.rs  conf.rs  draft.rs  id.rs  mod.rs  state.rs
tests/: snake.hex  test_cli.ofvr  test_cli.rs  test_commit.rs  test_hash.rs  test_models_author.rs  test_models_commit.rs  test_models_commit_data.rs  test_models_conf.rs  test_models_state.rs  test_ofvr_state.rs
tests/before-after/: .gitignore  Cargo.toml
tests/before-after/cli/: before-after.rs
