cargo-features = ["per-package-target", "edition2024"]

[package]
name = "ofvr"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autobenches = false
default-target = "aarch64-apple-darwin"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]
targets = [
    "aarch64-apple-darwin",
]

[dependencies]
pqpfs = {path = "../pqpfs"}
chrono = { version = "0.4.38", features = ["serde", "libc"] }
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
t16 = { path = "../t16" }
gdiff = { path = "../gadgets/packages/gdiff" }
security-framework = { version = "3.0.0", features = ["OSX_10_13", "log"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
iocore = { version = "0.1000.0", path = "../gadgets/packages/iocore" }
hex = "0.4.3"
flate2 = "1.0.35"

[[bin]]
name = "ofvr"
path = "ofvr.rs"
test = false
doctest = false

[lib]
name = "ofvr"
path = "ofvr/lib.rs"
test = true
doctest = false
bench = false
doc = false
plugin = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
