cargo-features = ["per-package-target", "edition2024"]

[package]
name = "ofvr"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autobenches = false
default-target = "aarch64-apple-darwin"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]
targets = [
    "aarch64-apple-darwin",
]

[dependencies]
pqpfs = {path = "../pqpfs"}
chrono = { version = "0.4.38", features = ["serde", "libc"] }
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
t16 = { path = "../t16" }
gdiff = { path = "../gadgets/packages/gdiff" }
security-framework = { version = "3.0.0", features = ["OSX_10_13", "log"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
iocore = { path = "../gadgets/packages/iocore" }
sanitation = { path = "../gadgets/packages/sanitation" }
hex = "0.4.3"
flate2 = "1.0.35"
serde_bytes = "0.11.15"
serde_json = "1.0.133"
sha2 = "0.10.8"
sha3 = "0.10.8"
md5 = "0.7.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
rand = "0.8.5"
sequoia-openpgp = "1.21.2"
toml = "0.8.19"

# [[bin]]
# name = "ofvr"
# path = "ofvr.rs"
# test = false
# doctest = false

[lib]
name = "ofvr"
path = "ofvr/lib.rs"
test = true
doctest = false
bench = false
doc = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[dev-dependencies]
mockall = "0.13.1"
test-harness = "0.3.0"

# [profile.release]
# lto = true
# overflow-checks = true
# panic = "unwind"
# strip = true

# [profile.bench]
# debug = true
# lto = true
# overflow-checks = true
# strip = false

# [profile.test]
# debug = true
# lto = true
# overflow-checks = true
# strip = false

# [profile.dev]
# debug = true
# lto = true
# overflow-checks = true
# panic = "unwind"
# strip = false
