[package]
name = "ofvr"
version = "0.1.0"
edition = "2021"
autobins = false
autobenches = false

[dependencies]
pqpfs = {path = "./pqpfs"}
chrono = { version = "0.4.38", features = ["serde", "libc"] }
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
t16 = "0.0.1"
gdiff = { path = "./gdiff" }
security-framework = { version = "3.0.0", features = ["OSX_10_13", "log"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
iocore = { version = "2.3.2"  }
hex = "0.4.3"
flate2 = "1.0.35"
serde_bytes = "0.11.15"
serde_json = "1.0.133"
sha2 = "0.10.8"
sha3 = "0.10.8"
md5 = "0.7.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
rand = "0.8.5"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "ofvr"
path = "ofvr.rs"
test = false
doctest = false

[lib]
name = "ofvr"
path = "ofvr/lib.rs"
test = false
doctest = false
bench = false
doc = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dev-dependencies]
iocore-test = "2.3.2"

# [profile.release]
# lto = true
# overflow-checks = true
# panic = "unwind"
# strip = true

# [profile.bench]
# debug = true
# lto = true
# overflow-checks = true
# strip = false

# [profile.test]
# debug = true
# lto = true
# overflow-checks = true
# strip = false

# [profile.dev]
# debug = true
# lto = true
# overflow-checks = true
# panic = "unwind"
# strip = false
