[package]
name = "gdiff"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autobenches = true

[dependencies]
iocore = "2.3.2"
bincode = "1.3.3"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive", "alloc", "serde_derive"] }
og-enum-to-string = "0.1.0"
flate2 = "1.0.35"
digest = "0.10.7"
clap = { version = "4.5.21", features = ["derive"] }

[lib]
name = "gdiff"
path = "gdiff/lib.rs"
test = true
doctest = false
bench = false
doc = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[[bin]]
name = "gdiff"
path = "cli/gdiff.rs"
test = false
doctest = false
