cargo-features = ["per-package-target", "edition2024"]

[package]
name = "before-after"
version = "0.1.0"
edition = "2021"
default-target = "aarch64-apple-darwin"
autoexamples = false
autobenches = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps"]
targets = [
    "aarch64-apple-darwin",
]


[[bin]]
name = "before-after"
path = "cli/before-after.rs"
doctest = false
bench = false
doc = false
